# scTuner

./: .gitignore  README.md  pyproject.toml  scalescbatchhvgfunction.py
.github/workflows/: ci-cd.yml
sctuner/: __init__.py  models.py  pqutils.py  scalesc.py
src/sctuner/: models.py  optimisers.py  scalesc.py
tests/: test_1_pq.py  test_2_finetuning.py  test_3_integration.py  test_pq.py
tests/pytestdata/: dataset_0_split_0.parquet  dataset_1_split_0.parquet  dataset_2_split_0.parquet  joined_dataset.parquet  joined_dataset_raw.parquet
