[build-system]
requires = [
    "setuptools @ git+https://github.com/wheelnext/setuptools.git@pep_771","hatchling>=1.5.0"
]
#build-backend = "setuptools.build_meta"
#requires = []
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
exclude = ["*"]

[project]
name = "sctuner"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Julian Arts (Arts-of-coding)", email = "mail@julianarts.nl" },
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
cpu = [
  "torch","polars","scanpy", "tqdm", "pyarrow", "fastparquet"
]
gpu = [
  "torch","polars[gpu]","scanpy", "tqdm", "pyarrow", "fastparquet"
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "gpu" },
]
polars = [
  { index = "polars-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
#explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
#explicit = true

[[tool.uv.index]]
name = "polars-gpu"
url = "https://pypi.nvidia.com"

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.hatch.version]
path = "sctuner/__init__.py"

[tool.hatch.build]
exclude = [
  "/docs",
  "/tests",
]
